<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc296.thesocialnetwork.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_username"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_signup_username"
                android:id="@+id/signup_username"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_password"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:hint="@string/hint_signup_password"
                android:id="@+id/signup_password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_fullname"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:hint="@string/hint_signup_fullname"
                android:id="@+id/signup_fullname"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_hometown"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:hint="@string/hint_signup_hometown"
                android:id="@+id/signup_hometown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_birthday"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:hint="@string/hint_signup_birthday"
                android:id="@+id/signup_birthdate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/signup_bio"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:hint="@string/hint_signup_bio"
                android:id="@+id/signup_bio"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:background="#3b5998">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#aaa"
                    android:id="@+id/signup_profile_photo"/>

            </LinearLayout>


            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:text="@string/button_signup_attach_profile_picture"
                android:id="@+id/signup_take_profile_photo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/button_signup_cancel"
                android:id="@+id/signup_cancel"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/button_signup_submit"
                android:id="@+id/signup_submit"/>

        </LinearLayout>


    </LinearLayout>



</FrameLayout>
